samples/_failures_safe/1761074203_382896_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9deeb40f.c:182:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  182 | void print_tokens
      | ^~~~
